<resources>
    <string name="app_name">DailyCosmos</string>
    <string name="hello_blank_fragment">Hello blank parentFragment</string>
    <string name="today">Today</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="content_description_cover_photo">This image is the cover photo of the application.</string>
    <string name="favorite">Favorites</string>
    <string name="content_description_favorite">This icon redirects to the favorites parentFragment</string>
    <string name="content_description_search">This icon shows the search bar to locate an object.</string>
    <string name="more">more</string>
    <string name="content_description_about_of">This option redirects you to the activity to learn about the application and the developer.</string>
    <string name="about_of">About of</string>
    <string name="contact">Contact</string>
    <string name="content_description_contact">"This option redirects you to the activity to send an email to the developer. "</string>
    <string name="content_description_media_apod">This image is the picture of the cardview to display in the recycler view</string>
    <string name="title_item_apod">Flemings Triangular Wisp</string>
    <string name="supporting_text_item_apod">2021 July 27</string>
    <string name="secondary_text_item_apod">Chaotic in appearance, these tangled filaments of shocked, glowing gas are spread across planet Earth\'s sky toward the constellation of Cygnus as part of the Veil Nebula. The Veil Nebula itself is a large supernova remnant, an expanding cloud born of the death explosion of a massive star. Light from the original supernova explosion likely reached Earth over 5,000 years ago. The glowing filaments are really more like long ripples in a sheet seen almost edge on, remarkably well separated into the glow of ionized hydrogen atoms shown in blue and oxygen in red hues. Also known as the Cygnus Loop and cataloged as NGC 6979, the Veil Nebula now spans about 6 times the diameter of the full Moon. The length of the wisp corresponds to about 30 light years, given its estimated distance of 2,400 light years. Often identified as Pickering\'s Triangle for a director of Harvard College Observatory, it is also named for its discoverer, astronomer Williamina Fleming, as Fleming\'s Triangular Wisp.</string>
    <string name="action_1_item_apod">Add</string>
    <string name="action_2_item_apod">Share</string>
    <string name="content_description_shuffle" />
    <string name="shuffle">Shuffle</string>
    <string name="content_description_calendar" />
    <string name="calendar">Calendar</string>
    <string name="content_description_share" />
    <string name="share">Share</string>
    <string name="wait_for_the_image_to_load">Wait for the image to load</string>
    <string name="picture_was_saved_successfully">Picture was saved successfully</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor, massa a lacinia fringilla, nibh mauris eleifend neque, vitae feugiat mauris id nibh. Nulla pretium dapibus metus a pellentesque. Vestibulum suscipit leo sed ligula tincidunt, a vulputate libero mollis. Suspendisse neque libero, ultrices non quam quis, aliquam accumsan ante. Sed mauris libero, sollicitudin nec ultricies id, congue vel nisi. Fusce dictum purus sed augue egestas scelerisque. Vestibulum fermentum id ligula vel accumsan. Vestibulum id nulla hendrerit, tempor risus id, ullamcorper sem. Pellentesque non purus suscipit, pharetra ligula at, egestas elit. Aliquam erat volutpat. Integer eu ex lobortis, aliquet metus ut, sollicitudin lorem.</string>
    <string name="no_description">No description</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="back">back</string>
    <string name="next">Next</string>
    <string name="create_an_account">Create an account</string>
    <string name="subtitle_register01">Enter your name along with your email address to start your registration.</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="create_a_password">Create a password</string>
    <string name="subtitle_register02">Enter a password and retype it below to compare if they are the same. Must be longer than eight characters</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_field_empty">This field cannot be left empty</string>
    <string name="error_email_registered">This email is already registered. Please enter a new one.</string>
    <string name="error_email_no_valid">Insert a valid email</string>
    <string name="error_passwords_not_same">Passwords are not the same</string>
    <string name="error_password_short">The password must have a minimum of 8 characters</string>
    <string name="smile">Take o select a picture!</string>
    <string name="subtitle_register_03">Click on the icon above to select your profile picture.</string>
    <string name="error_no_photo_app">There is no app to take a photo</string>
    <string name="select_a_photo">Select a photo</string>
    <string name="click_here_to_share_this_photo">Did you like the image? Click here to share</string>
    <string name="enter_anonymously">Login as a guest</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_subtitle">Schedule, for content type and tone</string>
    <string name="storage">Storage</string>
    <string name="storage_subtitle">Storage and cache usage</string>
    <string name="appearance">Appearance</string>
    <string name="appearance_subtitle">Dark mode and color palette</string>
    <string name="help">Help</string>
    <string name="help_subtitle">Contact us, application information</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="rate_us">Rate us</string>
    <string name="listo_calixto">LISTO CALIXTO</string>
    <string name="from">from</string>
    <string name="settings">Settings</string>
    <string name="random">Random</string>
    <string name="content_description_settings">This option is intended to go to the application settings parentFragment.</string>
    <string name="title_explore_collapsing_toolbar">Find wonderful images of the cosmos and add them to your favorites</string>
    <string name="subtitle_explore_collapsing_toolbar">From June 16, 1995 to the present</string>
    <string name="helper_text_search_view">Click on the icon to search for images that are stored in your local database. For example, search for today\'s date in this format: YYYY-MM-DD</string>
    <string name="image_favorite">Image favorite</string>
    <string name="ask_download_traductor">Would you like to download a translator to switch from English to the language of your phone? It works with and without internet. It is by the Firebase machine learning kit. It\'s not the best but it works. It weighs about 30 Mb</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="downloading_translator_message">Downloading… this will take a few minutes.</string>
    <string name="translate_download_successfully">Model trained to translate downloaded</string>
    <string name="error_download_translate">There was an error downloading translator.</string>
    <string name="translate">Translate</string>
    <string name="snackbar_download_translator">Download has started</string>
    <string name="ask_download_traductor_title">Download translator</string>
    <string name="no_explanation">No explanation</string>
    <string name="caution">Cuation</string>
    <string name="caution_open_image"><![CDATA[Some of these images are in very high resolutions. If some of them don\'t load or you get kicked out of the app, it\'s probably because your phone doesn\'t support the resolution of the photo or because the file was too big. If you want to lower the resolution and be able to see all the images without any problem, you can go to Settings -> Storage -> Image Resolution -> Low. Sorry for the inconvenience.]]></string>
    <string name="cancel">Cancel</string>
    <string name="no_thanks">No, thanks</string>
    <string name="bad_news">Bad news</string>
    <string name="languaje_not_available">Sorry, the translator from English to the language of your phone is not available, it has not been created yet. We will have to wait for future updates. We apologize for the inconvenience.</string>
    <string name="error_request_future_dates_today">Hahaha how funny… you can\'t request future dates to today\'s dates!</string>
    <string name="show_original">Show original</string>
    <string name="sort_by">Sort by</string>
    <string name="new_first">New First</string>
    <string name="old_first">Old First</string>
    <string name="design">Design</string>
    <string name="staggered">Staggered</string>
    <string name="lineal">Lineal</string>
    <string name="only_images">Only images</string>
    <string name="textNoResultsSubtitle">Check that everything is spelled correctly or try different keywords.</string>
    <string name="textNoResultsTitle">No results were found for:</string>
    <string name="helper_text_search_view_02">To reload all the images, press the icon but without text</string>
    <string name="welcome_page_01_title">Welcome to DailyCosmos.</string>
    <string name="welcome_page_01_subtitle">DailyCosmos is an application that brings a new photograph of the cosmos every day. Free and without ads.</string>
    <string name="welcome_page_02_title">Explore among the stars.</string>
    <string name="welcome_page_02_subtitle">Discover more than 100,000 photos of the universe from the comfort of your cell phone. In addition, you can download the image in its maximum resolution.</string>
    <string name="welcome_page_03_title">Your place in the cosmos.</string>
    <string name="welcome_page_03_subtitle">Finally, you can create a free account to store your favorites and save them in the stars.</string>
    <string name="start_now">Start Now</string>
    <string name="close_session">Close session</string>
    <string name="sign_out">Sign out</string>
    <string name="translating">Translating…</string>
    <string name="wait_to_translator_download_is_finish">Wait until the download is finished</string>
    <string name="a_mistake_has_occurred">A mistake has occurred :c</string>
    <string name="press_the_button_below_to_try_again">Press the button below to try again</string>
    <string name="reload">Reload</string>
    <string name="error_request_before_dates_june_16_1995">No data before 16 June 1995</string>
    <string name="error_request_more_31_days">Please don\'t request more than 31 days</string>
    <string name="in_case_if_media_type_is_video">This time it\'s a video/animation/simulation. Unfortunately it\'s not possible to play them from here, but if you like, you can press the icon below to copy the link and visit the site from your browser.</string>
    <string name="link_copied">Link copied</string>
    <string name="no_copyright">No copyright</string>
    <string name="guest">Guest</string>
    <string name="guest_email">guest@dailycosmos.com</string>
    <string name="contact_me">Contact me</string>
    <string name="contact_me_subtitle">Questions, comments, suggestions?</string>
    <string name="use_without_internet">Use without internet</string>
    <string name="app_version">Version 1.0</string>
    <string name="brand">&#169; 2021 ListoCalixto</string>
    <string name="profile_picture">Profile picture</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
</resources>