<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:contentDescription="@string/content_description_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/calendar"
        android:contentDescription="@string/content_description_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/shuffle"
        android:contentDescription="@string/content_description_shuffle"
        android:icon="@drawable/ic_shuffle"
        android:title="@string/shuffle"
        app:showAsAction="ifRoom" />


</menu>