<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.settings.help.app_info.AppInfoFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textAppearance="@style/TextAppearance.DailyCosmosTypography.Body1" />

    <ImageView
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_140sdp"
        android:layout_margin="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_dailycosmos" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:textAppearance="@style/TextAppearance.DailyCosmosTypography.Body1" />

</LinearLayout>