<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dark_page_03"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.auth.welcome.pages.WelcomeFragmentPage03">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_210sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/nasa_logo_animation" />

    <LinearLayout
        android:id="@+id/layoutTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_page_03_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/welcome_page_03_subtitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/colorTextSecondary" />

    </LinearLayout>


</LinearLayout>