<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_4sdp"
        android:orientation="vertical"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="?attr/actionBarSize"
        android:paddingEnd="@dimen/_16sdp"
        tools:context=".ui.auth.register.Register02Fragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_password"
            android:textAppearance="@style/TextAppearance.DailyCosmosTypography.Headline3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/subtitle_register02"
            android:textAppearance="@style/TextAppearance.DailyCosmosTypography.Body1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:hint="@string/password"
            app:counterEnabled="true"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@drawable/ic_error"
            app:hintTextAppearance="@style/TextAppearance.DailyCosmosTypography.Subtitle2"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.DailyCosmosTypography.Body2" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_passwordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/confirm_password"
            app:counterEnabled="true"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@drawable/ic_error"
            app:hintTextAppearance="@style/TextAppearance.DailyCosmosTypography.Subtitle2"
            app:startIconDrawable="@drawable/ic_lock_outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_passwordConfirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.DailyCosmosTypography.Body2" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</layout>