<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    android:layout_margin="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/image_itemAPOD"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:contentDescription="@string/content_description_media_apod"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/photo_item_apod" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp">

            <!-- Title, secondary and supporting text -->

            <TextView
                android:id="@+id/date_itemAPOD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/supporting_text_item_apod"
                android:textAlignment="center"
                android:textSize="@dimen/_8sdp"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/title_itemAPOD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_item_apod"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:fontFamily="@font/pt_sans_bold"
                android:textSize="@dimen/_24ssp"
                android:textStyle="bold" />


        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_24sdp"
            android:paddingBottom="@dimen/_24sdp">

            <ImageButton
                android:id="@+id/favorites_itemAPOD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_favorite_border"
                app:tint="@color/colorPrimary" />

            <ImageButton
                android:id="@+id/share_itemAPOD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_share_border"
                app:tint="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>